--- a/my-app/src/components/UI/Button/Button.css
+++ b/my-app/src/components/UI/Button/Button.css
@@ -1,12 +1,18 @@
 .btn {
-  /* margin-right: 0 !important; */
   color: #fff !important;
   width: 220px !important;
+  margin: "0px!important";
+}
+button.ui.button.btn.medium {
+  margin: 0px !important;
+  margin-top: 20px !important;
+  margin-bottom: 30px !important;
+  margin-left: 5px !important;
 }
 
-.ui.button.btn.large {
-  margin-top: 10px !important;
-  margin-bottom: 0px !important;
-  margin-right: 2px !important;
-  margin-left: 2px !important;
+button.ui.button.btn.large {
+  margin: 0px !important;
+  margin-top: 20px !important;
+  margin-bottom: 30px !important;
+  margin-left: 5px !important;
 }
