--- a/my-app/src/components/Burger/Burger.css
+++ b/my-app/src/components/Burger/Burger.css
@@ -7,6 +7,7 @@
   font-weight: bold;
   font-size: 1.2rem;
   overflow-y: auto;
+  margin-top: none !important;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
@@ -31,5 +32,12 @@
     padding-bottom: 2rem; */
     bottom: 10px;
     position: relative;
+  }
+}
+
+@media (min-width: 700px) {
+  .Burger {
+    width: 350px;
+    height: 200px;
   }
 }
