--- a/my-app/src/components/UI/Button/Button.css
+++ b/my-app/src/components/UI/Button/Button.css
@@ -3,6 +3,9 @@
   width: 220px !important;
   margin: "0px!important";
 }
+
+button.ui.button.btn.large,
+button.ui.button.btn.larger,
 button.ui.button.btn.medium {
   margin: 0px !important;
   margin-top: 20px !important;
@@ -10,9 +13,6 @@ button.ui.button.btn.medium {
   margin-left: 5px !important;
 }
 
-button.ui.button.btn.large {
-  margin: 0px !important;
-  margin-top: 20px !important;
-  margin-bottom: 30px !important;
-  margin-left: 5px !important;
+button.ui.button.btn.larger {
+  width: 100% !important;
 }
